  information will be very useful because it will list
  all the strings which were updated or added. If you
  encounter a modified string, please look in the 
  reference (english) file to see if you existing
  translation is still valid and update if appropriate.

  [U] = updated, [+] = added, [-] = removed

  ====================================================

  01-05-2003 - settings
    [+] strGeotrackingLocationError
    [+] strMyHeaderError
    [+] strMyFooterError
    [u] strMyHeader
    [u] strMyFooter  

  01-03-2003 - default
    [+] strConfirmResetCampaignStats

  12-27-2002 - maintenance
    [+] strDeliveryCacheFiles

  12-18-2002 - settings
    [+] strDbLocal (Postgres only)

  12-17-2002 - settings
    [+] strDbPort

  12-16-2002 - settings
    [+] strTableWrongType
    [+] strTypeFTPErrorDir
    [+] strTypeFTPErrorConnect
    [+] strTypeFTPErrorHost
    [+] strTypeDirError

  12-15-2002 - settings
    [u] strCacheShmop
    [+] strCacheSysvshm
    [+] strExperimental

  12-10-2002 - default
    [+] strZoneProbListChainLoop

  11-28-2002 - default
    [+] strTargetStats
    [+] strCampaignTarget
    [+] strTargetRatio
    [+] strTargetModifiedDay
    [+] strTargetModifiedWeek
    [+] strTargetModifiedMonth
    [+] strNoTargetStats

  10-22-2002 - invocation
    [+] strInvocationDontShowAgainCampaign

  10-11-2002 - default
    [+] strLaterThan
    [+] strLaterThanOrEqual
    [+] strEarlierThan
    [+] strEarlierThanOrEqual
  
  10-11-2002 - settings
    [+] strWarningPREG
    [+] strHostAndGeo
    [+] strRemoteHost
    [+] strLogHostnameOrIP
    [+] strLogIPOnly
    [+] strLogIP
    [u] strUpdateSuccess
    [u] strSystemNeedsUpgrade
    [u] strReverseLookup
    [u] strProxyLookup
    [u] strCompactStats
    [u] strLogAdviews
    [u] strLogAdclicks
    [u] strLogSource
    [u] strLogBeacon
    [u] strIgnoreHosts
    [u] strBlockAdviews
    [u] strBlockAdclicks

  06-11-2002 - settings
    [+] strWarningTrackVars

  06-11-2002 - default